--- a/.github/workflows/python_actions.yaml
+++ b/.github/workflows/python_actions.yaml
@@ -41,9 +41,8 @@ jobs:
       run: |
         pip install --upgrade  pip
         pip install setuptools==57.5.0
-        pip install psycopg2 -I --no-cache-dir 
-        pip install -r requirements.txt
-        pip install -r dev-requirements.txt
+        pip install -r requirements.txt --verbose
+        pip install -r dev-requirements.txt --verbose
         
     - name: Run unittests
       run: |
