--- a/.github/workflows/python_actions.yaml
+++ b/.github/workflows/python_actions.yaml
@@ -41,8 +41,8 @@ jobs:
       run: |
         pip install --upgrade  pip
         pip install setuptools==57.5.0
-        pip install -r requirements.txt --verbose
-        pip install -r dev-requirements.txt --verbose
+        pip install -r requirements.txt --no-cache-dir 
+        pip install -r dev-requirements.txt --no-cache-dir 
         
     - name: Run unittests
       run: |
