--- a/.github/workflows/python_actions.yaml
+++ b/.github/workflows/python_actions.yaml
@@ -40,7 +40,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade  pip
-        pip install setuptools==57
+        pip install setuptools<57
         pip install -r requirements.txt 
         pip install -r dev-requirements.txt 
         
